Dillo project
=============================================================================

dillo-2.2 [??]

+- Added keybindings for scrolling.
   Patch: corvid, Jorge Arellano Cid
+- Add support for multiple class names in CSS.
 - Fix X11 coordinate overflows with huge borders.
 - Improve CSS font parsing.
 - Enable font face setting via <font> element.
 - Ignore XML comment markers in CSS.
   Patch: Johannes Hofmann
+- Cleaned up system includes in dpid directory.
 - Fixed CustProgressBox() for systems without weak symbols.
 - Handle signed chars. Added dIsspace() and dIsalnum() to dlib.
 - Added a_Dpip_get_attr_l() to DPIP's API.
 - Changed the CCCs to build in one step (for both HTTP and DPI). This
   is simpler and helps to avoid race conditions.
 - Updated CCCwork.txt to the new scheme.
 - Fixed a bug with OPTION element (it was parsing entities twice).
 - Bugfix: remove the empty cache entry lingering after connection abort.
 - Switched capi to use dlib's Dlist instead of a_List_* methods.
 - Remove empty cache entries on Stop-button press and new link request!
 - Fixed URL unescaping in the datauri DPI.
 - Changed and reimplemented the DPI API.
   * Fixed bugs and updated all DPI programs:
   * Reimplemented the file dpi using select(). No pthreads-based anymore.
   * Fixed ftp dpi: downloads, streamed transfer, error feedback.
   * Fixed a bug in dillo with lingering cache entries.
   * Made dpidc a C language program.
   * Made the internal dsh implementation use unique functions for read/write.
   * Removed the write/fwrite mix in DPIP.
   * Made the DPIP API token-based. Packet assembling is coded inside DPIP!
   * Several cleanups and more error handling sprinkled all over too.
   Patches: Jorge Arellano Cid
+- Fix segfault from AREA when MAP is missing name attribute.
 - Fix image map coordinates when margin/border/padding present.
 - Handle stylesheet @charset.
 - Fix cache segfault when cache entry removed.